--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,7 @@
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@drawable/drawable</item>
     </style>
+    <style name="progressColor" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/progress_bar</item>
+    </style> 
 </resources>
