--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,56 +9,53 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="245dp"
-        android:layout_height="73dp"
-        android:layout_marginStart="58dp"
-        android:layout_marginTop="154dp"
-        android:layout_marginEnd="58dp"
+        android:layout_width="@dimen/wannaHelpWidth"
+        android:layout_height="@dimen/wannaHelpHeight"
+        android:layout_marginStart="@dimen/wannaHelpLeftMarg"
+        android:layout_marginTop="@dimen/wannaHelpTopMarg"
+        android:layout_marginEnd="@dimen/wannaHelpRightMarg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/icon_logo" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="116dp"
-        android:layout_height="16dp"
-        android:layout_marginStart="122dp"
-        android:layout_marginTop="285dp"
-        android:layout_marginEnd="122dp"
-        android:layout_marginBottom="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:srcCompat="@mipmap/logo" />
-
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="38dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="161dp"
-        android:layout_marginTop="83dp"
-        android:layout_marginEnd="161dp"
-        android:layout_marginBottom="164dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        android:layout_width="@dimen/progBarWidth"
+        android:layout_height="@dimen/wannaHelpHeight"
+        android:layout_marginStart="@dimen/progBarLeftMarg"
+        android:layout_marginTop="@dimen/progBarTopMarg"
+        android:layout_marginEnd="@dimen/progBarRightMarg"
+        android:theme="@style/progressColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        android:theme="@style/progressColor"/>
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="68dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="146dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="146dp"
-        android:layout_marginBottom="124dp"
-        android:text="Загрузка..."
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        android:layout_width="@dimen/loadTextWidth"
+        android:layout_height="@dimen/loadTextHeight"
+        android:layout_marginStart="@dimen/loadTextLeftMarg"
+        android:layout_marginTop="@dimen/loadTextTopMarg"
+        android:layout_marginEnd="@dimen/loadTextRigthMarg"
+        android:text="@string/loadingText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/simbirImgLeftMarg"
+        android:layout_marginTop="@dimen/simbirImgTopMarg"
+        android:layout_marginEnd="@dimen/simbirImgRightMarg"
+        android:layout_marginBottom="@dimen/simbirImgBotMarg"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.679"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:srcCompat="@mipmap/logo" />
 </android.support.constraint.ConstraintLayout>
