--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGreen">#008000</color>
+    <color name="colorGray">#eaede8</color>
+    <color name="colorMelon">#fe7460</color>
+    <color name="light_olive_green">#9ebf50</color>
+    <color name="black__87">#de000000</color>
 </resources>
