--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,12 @@
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@drawable/drawable</item>
     </style>
+
     <style name="progressColor" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@drawable/progress_bar</item>
-    </style> 
+    </style>
+
+    <style name="greyBackground">
+        <item name="android:windowBackground">@drawable/rectanglecolor</item>
+    </style>
 </resources>
