--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_news"
         android:icon="@mipmap/news"
@@ -12,7 +13,6 @@
 
     <item
         android:id="@+id/menu_help"
-        android:icon="@drawable/shape"
         android:title="@string/help"/>
 
     <item
