--- a/app/src/main/res/layout/grid_layout.xml
+++ b/app/src/main/res/layout/grid_layout.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="168dp"
     android:layout_height="128dp"
-    android:background="@color/colorGray"
-    android:layout_margin="4dp">
+    android:layout_margin="8dp"
+    android:background="@color/colorGray">
 
     <ImageView
         android:id="@+id/imageView1"
