--- a/app/src/main/res/layout/recycler_view.xml
+++ b/app/src/main/res/layout/recycler_view.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="4dp">
+    android:padding="8dp">
 
     <TextView
         android:layout_width="@dimen/recyclerTextViewWidth"
@@ -28,16 +28,38 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/headline"
         android:layout_alignParentStart="true"
+        android:layout_above="@id/heart"
         android:layout_marginTop="@dimen/recyclerViewMargTop">
 
     </android.support.v7.widget.RecyclerView>
 
+    <ImageView
+        android:id="@+id/heart"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_above="@+id/botNav"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="159dp"
+        android:layout_marginEnd="159dp"
+        android:layout_marginBottom="-32dp"
+        android:src="@drawable/shape" />
+    
+    <View
+        android:id="@+id/shadowView"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@drawable/shadow_shape"
+        android:layout_above="@+id/botNav"/>
+
     <android.support.design.widget.BottomNavigationView
+        android:id="@+id/botNav"
         android:layout_width="match_parent"
         android:layout_height="@dimen/bottomNavHeight"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/menu_bottom"/>
+        android:layout_marginBottom="8dp"
+        app:menu="@menu/menu_bottom" />
 
 </RelativeLayout>
