--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -42,9 +42,9 @@
 
     <dimen name="recyclerTextViewHeight">19dp</dimen>
     <dimen name="recyclerTextViewWidth">223dp</dimen>
-    <dimen name="recyclerViewTextViewMargLeft">68.5</dimen>
+    <dimen name="recyclerViewTextViewMargLeft">69dp</dimen>
     <dimen name="recyclerViewTextViewMargTop">19dp</dimen>
-    <dimen name="recyclerViewTextViewMargRight">68.5</dimen>
+    <dimen name="recyclerViewTextViewMargRight">69dp</dimen>
     <dimen name="recyclerViewTextViewSize">16sp</dimen>
 
     <dimen name="bottomNavHeight">54dp</dimen>
