--- a/app/src/main/res/layout/recycler_view.xml
+++ b/app/src/main/res/layout/recycler_view.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="8dp">
+    android:padding="4dp">
 
     <TextView
         android:layout_width="@dimen/recyclerTextViewWidth"
@@ -35,16 +35,18 @@
 
     <ImageView
         android:id="@+id/heart"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/botNav"
+        android:layout_alignTop="@+id/shadowView"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="159dp"
-        android:layout_marginEnd="159dp"
-        android:layout_marginBottom="-32dp"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="-10dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="-31dp"
         android:src="@drawable/shape" />
-    
+
     <View
         android:id="@+id/shadowView"
         android:layout_width="match_parent"
