--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -23,6 +23,7 @@
     <item
         android:id="@+id/menu_profile"
         android:icon="@mipmap/profile"
-        android:title="@string/profile"/>
+        android:title="@string/profile"
+        android:onClick="onMenuItemClick"/>
 
 </menu>
