--- a/app/src/main/res/menu/profile_bot_nav.xml
+++ b/app/src/main/res/menu/profile_bot_nav.xml
@@ -22,7 +22,6 @@
     <item
         android:id="@+id/menu_profile"
         android:icon="@mipmap/profile"
-        android:title="@string/profile"
-        android:onClick="onMenuItemClick"/>
+        android:title="@string/profile"/>
 
 </menu>
